@@ -1,6 +1,9 @@
+import java.io.DataInputStream;
 import java.io.File;
+import java.io.FileInputStream;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.LinkedList;
@@ -9,8 +12,15 @@ import java.util.List;
 public class Main {
 
     public static void main(String[] args) throws IOException {
-        Vector3D vector = new Vector3D(1, 2, 3);
-        List<Vector3D> vectors = Vector3D.loadFromFile(Paths.get(System.getProperty("user.home"), "Downloads", "example.b3v").toFile());
+
+        File file = Path.of(System.getProperty("user.home"), "Downloads", "example.b3v").toFile();
+        List<Vector3D> vectorList = new LinkedList<>();
+        vectorList.add(new Vector3D(11, 11, 11));
+        Vector3D.writeToFile(file, vectorList);
+
+
+
+
 
 
     }
